Add an endpoint to get the user threads
