# docs/swagger.json
@@ -167,11 +167,6 @@
         },
         "/users/{username}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "This endpoint is used to get the another user by username",
                 "produces": [
                     "application/json"
@@ -194,6 +189,65 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/controller.profileResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{username}/threads": {
+            "get": {
+                "description": "This endpoint is used to get the user threads",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get User Threads",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page, default 1",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit, default 10",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.threadsResponse"
                         }
                     },
                     "401": {
@@ -244,6 +298,27 @@
                 }
             }
         },
+        "controller.pageInfoData": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer",
+                    "x-order": "0"
+                },
+                "page": {
+                    "type": "integer",
+                    "x-order": "1"
+                },
+                "pageTotal": {
+                    "type": "integer",
+                    "x-order": "2"
+                },
+                "total": {
+                    "type": "integer",
+                    "x-order": "3"
+                }
+            }
+        },
         "controller.profileData": {
             "type": "object",
             "properties": {
@@ -283,13 +358,6 @@
                 "totalFollower": {
                     "type": "integer",
                     "x-order": "8"
-                },
-                "threads": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/controller.threadData"
-                    },
-                    "x-order": "9"
                 }
             }
         },
@@ -378,6 +446,39 @@
                 "categoryID": {
                     "type": "string",
                     "x-order": "9"
+                }
+            }
+        },
+        "controller.threadsInfoWrapper": {
+            "type": "object",
+            "properties": {
+                "threads": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controller.threadData"
+                    },
+                    "x-order": "0"
+                },
+                "pageInfo": {
+                    "x-order": "1",
+                    "$ref": "#/definitions/controller.pageInfoData"
+                }
+            }
+        },
+        "controller.threadsResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string",
+                    "x-order": "0"
+                },
+                "message": {
+                    "type": "string",
+                    "x-order": "1"
+                },
+                "data": {
+                    "x-order": "2",
+                    "$ref": "#/definitions/controller.threadsInfoWrapper"
                 }
             }
         },
